package sv.gestionacademica.enums;

public enum EstadoMatricula {
    PENDIENTE_PAGO,
    ACTIVA,
    CANCELADA
}