package main.java.sv.gestionacademica.enums;

public enum EstadoUsuario {
    ACTIVO,
    INACTIVO
}
